# ft_linear_regression

./: .gitignore  CMakeLists.txt  README.md  predict.cpp
predict/: CMakeLists.txt  predict.cpp
resources/: coefficient.txt
testEigen/: CMakeLists.txt  main.cpp
trainModel/: CMakeLists.txt  trainModel.cpp
trainModel/CSVTransform/: CSVTransform.cpp  CSVTransform.h
trainModel/ParserCSV/: ParserCSV.cpp  ParserCSV.h
trainModel/ft_linear_regression/: ft_linear_regression.cpp  ft_linear_regression.h
visualization_in_python/: main.py
