cmake_minimum_required(VERSION 3.20)
project(trainModel)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror -Waddress -Warray-bounds -O2")
find_package(Boost 1.76.0)
if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    add_executable(trainModel trainModel.cpp ParserCSV/ParserCSV.h CSVTransform/CSVTransform.cpp CSVTransform/CSVTransform.h)
endif()
